infra/k8s/overlays/team-02/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qoomlee-team-02
  labels:
    team: team-02
