infra/k8s/overlays/team-02/patch-httproutes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qoomlee-api
spec:
  hostnames:
    - "team-02-qoomlee-api.anuchito.com"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: payment-api
spec:
  hostnames:
    - "team-02-payment-api.anuchito.com"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web
spec:
  hostnames:
    - "team-02-qoomlee-web.anuchito.com"
